--- a/static/styles/history.css
+++ b/static/styles/history.css
@@ -1,30 +1,13 @@
 html, body {
-    margin: 0; /* Remove default margin */
-    padding: 0; /* Remove default padding */
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow-x: hidden; /* Prevent horizontal scrolling */
-    background-color: black;
-}
-.hero-container {
-    background-repeat: no-repeat;
     margin: 0;
     padding: 0;
-    z-index: -1;
-    top: 0;
     width: 100%;
-    position: relative;
-    
-
+    height: 100%;
+    overflow-x: hidden;
+    background-color: black;
 }
 
-.hero {
-    width: 100%; 
-    height: auto; 
-    display: block;
-}
-
-.pagetitle{
+.pagetitle {
     font-family: "adobe-garamond-pro", serif;
     font-weight: 400;
     font-style: normal;
@@ -34,6 +17,36 @@ html, body {
     padding-left: 4em;
 }
 
-/* Packery css*/
-.grid-item { width: 25%; }
-.grid-item--width2 { width: 50%; }
+.grid {
+    position: relative; /* Required for Packery */
+    width: 100%; /* Full width of the container */
+    margin: 0 auto; /* Center the grid on the page */
+    z-index: 0;
+
+}
+
+.grid-item {
+    position: absolute; /* Packery handles item placement */
+    width: 100%; /* Fixed width for items */
+    height: auto; /* Height depends on image */
+    box-sizing: border-box;
+    padding: 3px;
+
+}
+
+.grid-item img {
+    display: block; /* Prevent inline spacing around images */
+    width: 100%; /* Fit image to container width */
+    height: auto; /* Maintain aspect ratio */
+}
+
+.grid-item--width2 {
+    width: 100%; /* Example wider item */
+}
+
+@media (min-width: 640px)  {.grid-item {width: 50%}}
+@media (min-width: 960px)  {.grid-item {width: 33.333%}}
+@media (min-width: 1280px) {.grid-item {width: 25%}}
+@media (min-width: 1600px) {.grid-item {width: 20%}}
+@media (min-width: 1920px) {.grid-item {width: 16.666%}}
+@media (min-width: 2240px) {.grid-item {width: 14.2857%}}
