--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -1,4 +1,13 @@
 /* Navigation Title Styling */
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  background-color: black;
+}
+
 .nav-title {
   font-family: "adobe-garamond-pro", serif;
   font-weight: 400;
@@ -13,4 +22,41 @@
   padding-left: 15px;
   top: 0;
   z-index: 6;
+}
+
+.pagetitle {
+  font-family: "adobe-garamond-pro", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 4.5em;
+  padding-top: 30vh;
+  color: white;
+  padding-left: 300px;
+  line-height: 1em;
+}
+
+.sub {
+  font-family: "adobe-garamond-pro", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.5em;
+  color: white;
+  padding-left: 300px;
+  padding-bottom: 56vh;
+}
+
+.text {
+  padding-left: 50px;
+  width: 65%;
+  color: white;
+}
+
+p {
+  font-family: "adobe-garamond-pro", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.5em;
+  line-height: 1.3em;
+  color: white;
+  margin-bottom: 1.5em
 }
