--- a/templates/catagories/hospitality.html
+++ b/templates/catagories/hospitality.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>History</title>
+    <link href="{{ url_for('static', filename='styles/base.css') }}" rel="stylesheet" />
 </head>
 
-{% include 'menu.html' %}
+
 <body>
-    <h1>renovation</h1>
-    
+
+    {% include 'navigation.html' %}
+    <div class="pagetitle">Hospitality and Education</div>
+
 </body>
 </html>
