--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -27,11 +27,10 @@
 <div style="display:none" id="block">
   <div class="nav-box">
       <div class="nav">
-          <div><a href="{{ url_for('history') }}">History & Preservation</a></div>
-          <div><a href="{{ url_for('preserving') }}">Preserving & Canning</a></div>
-          <div><a href="{{ url_for('vinyard') }}">Vinyard</a></div>
-          <div><a href="{{ url_for('education') }}">Education</a></div>
-          <div><a href="{{ url_for('hospitality') }}">Hospitality</a></div>
+          <div><a href="{{ url_for('history') }}">History & Restoration</a></div>
+          <div><a href="{{ url_for('preserving') }}">Preserving Food</a></div>
+          <div><a href="{{ url_for('vineyard') }}">Vineyard</a></div>
+          <div><a href="{{ url_for('hospitality') }}">Hospitality & Education</a></div>
           <div><a href="{{ url_for('contact') }}">Contact</a></div>
       </div>
   </div>
