--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -1,14 +1,16 @@
-/* Ensure no scrolling on the page */
+
 body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-    overflow: hidden; /* Prevent scrolling */
+    overflow: hidden; 
   }
   
   
 .hero {
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
     margin: 0;
     z-index: -1;
     position: absolute;
@@ -19,10 +21,11 @@ body, html {
     font-weight: 400;
     font-style: normal;
     font-size: 3em;
-    text-align: center;
+    text-align: right;
     display: flex;
-    justify-content: center;
-    margin-top: 50vh;
+    justify-content: right;
+    margin-top: 67vh;
+    padding-right: 5em;
     color: white;
     text-decoration: none;
     transition: color 0.3s ease;
