--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,12 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>History</title>
+    <title>The Farm/Contact</title>
+    <link href="{{ url_for('static', filename='styles/catagories/contact.css') }}" rel="stylesheet" />
 </head>
 
-{% include 'menu.html' %}
-<body>
-    <h1>contact</h1>
 
+<body>
+
+    {% include 'navigation.html' %}
+
+    <div class="beth">
+    
+        <h1>The Farm catalogues the work of Beth Nelson and her multidisiplinary role managing and restoring one historic property in Sonoma County, California.
+        </h1>
+        <h1><a href="mailto:nelsonart@ymail.com">Email</a><br>
+        <a href="https://bethnelsoncv.blogspot.com/" target="_blank">CV</a></h1>
+
+    </div>
+    <img src="{{ url_for('static', filename='/img/history/interior/IMG_9675.jpg') }}">
+
+    <div>
+    {% include 'footer.html' %}
+</div>
 </body>
 </html>
