--- a/templates/index.html
+++ b/templates/index.html
@@ -12,12 +12,10 @@
 
 
 
-{% block main %}
-
 <body>
   
   <div>
-    <img class="hero"src="{{ url_for('static', filename='img/opening_hero.jpg') }}">
+    <img class="hero"src="{{ url_for('static', filename='img/hero/opening_hero.jpg') }}">
   </div>
 
   <a class="title" href="{{ url_for('menu') }}">The Farm</a>
@@ -25,7 +23,7 @@
   <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 
-{% endblock %}
+
 
 
 
