--- a/templates/catagories/history.html
+++ b/templates/catagories/history.html
@@ -11,7 +11,7 @@
 {% include 'navigation.html' %}
 
 <div class="pagetitle">History & Restoration</div>
-<div class="sub">To restore a farm is to restore life itself.</div>
+<div class="sub">Add subtitle here.</div>
 
 <div class="grid">
     <div class="grid-item">
