--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -33,17 +33,10 @@ html, body {
   color: white;
   padding-left: 300px;
   line-height: 1em;
+  position:sticky;
 }
 
-.sub {
-  font-family: "adobe-garamond-pro", serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 1.5em;
-  color: white;
-  padding-left: 300px;
-  padding-bottom: 56vh;
-}
+
 
 .text {
   padding-left: 50px;
