--- a/static/styles/catagories/contact.css
+++ b/static/styles/catagories/contact.css
@@ -5,18 +5,19 @@ body{
 
 .beth {
     padding-top: 18em;
-    margin-left: 300px;
+    margin-left: 15px;
     display: flex;
-    width: 100%
+    width: 100%;
+    justify-content: space-between;
+    margin-right: 15px;
 }
 
 img {
-    width: 40%;
+    width: 30%;
     height: auto;
-    padding-right: 40px;
+    margin-right: 15px;
     padding-top: 10px;
     object-fit: cover;
-    margin-left: 300px;
 }
 
 h1 {
@@ -28,5 +29,6 @@ h1 {
     font-style: normal;
     font-size: 1.5em;
     color: white;
-    padding-right: 40px;
+    padding-right: 15px;
+    padding-bottom: 1.5em;
 }
