--- a/static/styles/catagories/history.css
+++ b/static/styles/catagories/history.css
@@ -8,7 +8,16 @@ html, body {
   background-color: black;
 }
 
+.sub {
+  font-family: "adobe-garamond-pro", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.5em;
+  color: white;
+  padding-left: 300px;
+  padding-bottom: 62vh;
 
+}
 
 .grid {
   position: relative; /* Required for Packery */
