--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -16,17 +16,25 @@ body, html {
     position: absolute;
 }
   
-.title{
+.hidden-text{
     font-family: "adobe-garamond-pro", serif;
     font-weight: 400;
     font-style: normal;
     font-size: 3em;
-    text-align: right;
-    display: flex;
-    justify-content: right;
     margin-top: 67vh;
-    padding-right: 5em;
+    margin-left: 40%;
     color: white;
+    text-align: center;
+    display: block;
     text-decoration: none;
     transition: color 0.3s ease;
+    opacity: 0;
+    transform: scale(0.5);
+    transition: opacity 1s ease-out, transform 1s ease-out;
+    position: relative;
+}
+
+.visible-text {
+    opacity: 1;
+    transform: translateX(0) scale(1);
 }
