--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,14 +13,13 @@
     {% include 'navigation.html' %}
 
     <div class="beth">
-    
+        <img src="{{ url_for('static', filename='/img/history/interior/IMG_9675.jpg') }}">
         <h1>The Farm catalogues the work of Beth Nelson and her multidisiplinary role managing and restoring one historic property in Sonoma County, California.
         </h1>
-        <h1><a href="mailto:nelsonart@ymail.com">Email</a><br>
-        <a href="https://bethnelsoncv.blogspot.com/" target="_blank">CV</a></h1>
-
+        <h1>Email:<a href="mailto:nelsonart@ymail.com"> nelsonart@ymail.com</a><br><br>
+        <a href="https://bethnelsoncv.blogspot.com/" target="_blank">CV: Beth's other projects.</a></h1>
+        
     </div>
-    <img src="{{ url_for('static', filename='/img/history/interior/IMG_9675.jpg') }}">
 
     <div>
     {% include 'footer.html' %}
