--- a/templates/catagories/history.html
+++ b/templates/catagories/history.html
@@ -13,6 +13,88 @@
 <div class="pagetitle">History & Restoration</div>
 <div class="sub">Add subtitle here.</div>
 
+<div class="history-container">
+    <div class="text">
+        <p>In 1834 General Mariano Vallejo divided up land north of San Francisco 
+    
+            into land grants sanctioned by the Mexican government. Old Vine Farms 
+            
+            sits on a piece of the original El Molino Mexican Land Grant. Molino,  
+            
+            Spanish for mill, refers to the oldest powered commercial sawmill in 
+            
+            California.</p>
+            
+           <p>In the late 19th century, Italian immigrants came to the North Bay having 
+            
+            entered through the port of San Francisco via what we now call The Ferry 
+            
+            Building. Giuseppe Martinelli ( age 19 ) and Luisa Vellutini ( age 16 ) eloped  
+            
+            from their small village in Tuscany, and made their way to the Russian 
+            
+            River Valley. The roads that intersect at the corner of Old Vine Farms still 
+            
+            bear their names to this day. </p>
+            
+            
+            <p>The climate of the Russian River Valley proved excellent for 
+            
+            growing grapes. Giuseppe and Luisa picked hops, made charcoal and cut 
+            
+            timber, in an effort to generate enough money to buy property. On 
+            
+            Sundays they would bike and hike throughout the valley looking for land. 
+            
+            In 1902 they were able to purchase a piece of the original El Molino 
+            
+            Mexican Land grant for $2,625.00. They brought deep root stock vines 
+            
+            from Tuscany and were able to start their dry farm vineyard by the 
+            
+            beautiful Green Valley River.</p> 
+            
+            
+        <p>They soon had a thriving family, three boys and one girl: Alfredo, Dominic, 
+            
+            Etta and Leno. Later, Luisa sent a request to her Tuscan village for two 
+            
+            mail order brides. Steerage tickets were procured and the two 
+            
+            women set out from Italy by ship for Northern California. Two sisters
+            
+             ( Pia and Natalina ) arrived safely to San Francisco and 
+            
+            eventually married Alfredo and Dominic. Two brothers married two sisters.</p> 
+            
+            
+        <p>Years later when Luisa and Giuseppe died, the property was divided 
+            
+            amongst the siblings. The house at Old Vine Farms was built in 1940 by 
+            
+            Dominic and Pia, but the exact date the barn was built is unknown. 
+            
+            With Luisa and Giuseppe gone, Pia became the “hearth” of the family. 
+            
+             An excellent cook, gardener and homemaker, Pia planted fruit 
+            
+             trees and olives, figs and walnuts. To this day Old Vine Farms 
+            
+             continues to harvest and preserve the fruits and nuts from these same 
+            
+            trees. The heritage grapes that Giuseppe and Luisa envisioned flourishing, 
+            
+            are still lovingly tended by hand and protected. The restoration of the farm 
+            
+            has been a continuing labor of love for the last ten years, keeping to the 
+            
+            original footprint of the farm, and preserving the unique beauty of the 
+            
+            Green Valley River and its West County history.</p>    
+    </div>
+<img class="hero" src="{{ url_for('static', filename='/img/hero/NIGHT_HERO_LONG.jpg') }}" alt="History Image">
+</div>
+
 <div class="grid">
     <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/history/IMG_1778.jpg') }}">
@@ -99,85 +181,7 @@
     </div>
 </div>
 
-<div class="text">
-    <p>In 1834 General Mariano Vallejo divided up land north of San Francisco 
 
-        into land grants sanctioned by the Mexican government. Old Vine Farms 
-        
-        sits on a piece of the original El Molino Mexican Land Grant. Molino,  
-        
-        Spanish for mill, refers to the oldest powered commercial sawmill in 
-        
-        California.</p>
-        
-       <p>In the late 19th century, Italian immigrants came to the North Bay having 
-        
-        entered through the port of San Francisco via what we now call The Ferry 
-        
-        Building. Giuseppe Martinelli ( age 19 ) and Luisa Vellutini ( age 16 ) eloped  
-        
-        from their small village in Tuscany, and made their way to the Russian 
-        
-        River Valley. The roads that intersect at the corner of Old Vine Farms still 
-        
-        bear their names to this day. </p>
-        
-        
-        <p>The climate of the Russian River Valley proved excellent for 
-        
-        growing grapes. Giuseppe and Luisa picked hops, made charcoal and cut 
-        
-        timber, in an effort to generate enough money to buy property. On 
-        
-        Sundays they would bike and hike throughout the valley looking for land. 
-        
-        In 1902 they were able to purchase a piece of the original El Molino 
-        
-        Mexican Land grant for $2,625.00. They brought deep root stock vines 
-        
-        from Tuscany and were able to start their dry farm vineyard by the 
-        
-        beautiful Green Valley River.</p> 
-        
-        
-    <p>They soon had a thriving family, three boys and one girl: Alfredo, Dominic, 
-        
-        Etta and Leno. Later, Luisa sent a request to her Tuscan village for two 
-        
-        mail order brides. Steerage tickets were procured and the two 
-        
-        women set out from Italy by ship for Northern California. Two sisters
-        
-         ( Pia and Natalina ) arrived safely to San Francisco and 
-        
-        eventually married Alfredo and Dominic. Two brothers married two sisters.</p> 
-        
-        
-    <p>Years later when Luisa and Giuseppe died, the property was divided 
-        
-        amongst the siblings. The house at Old Vine Farms was built in 1940 by 
-        
-        Dominic and Pia, but the exact date the barn was built is unknown. 
-        
-        With Luisa and Giuseppe gone, Pia became the “hearth” of the family. 
-        
-         An excellent cook, gardener and homemaker, Pia planted fruit 
-        
-         trees and olives, figs and walnuts. To this day Old Vine Farms 
-        
-         continues to harvest and preserve the fruits and nuts from these same 
-        
-        trees. The heritage grapes that Giuseppe and Luisa envisioned flourishing, 
-        
-        are still lovingly tended by hand and protected. The restoration of the farm 
-        
-        has been a continuing labor of love for the last ten years, keeping to the 
-        
-        original footprint of the farm, and preserving the unique beauty of the 
-        
-        Green Valley River and its West County history.</p>   
-    
-</div>
 
 {% include 'footer.html' %}
 
