--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -30,11 +30,16 @@ body, html {
     transition: color 0.3s ease;
     opacity: 0;
     transform: scale(0.5);
-    transition: opacity 1s ease-out, transform 1s ease-out;
+    transition: opacity 1s ease-out, transform 1s ease-out, color 0.3s ease;
     position: relative;
 }
 
 .visible-text {
     opacity: 1;
     transform: translateX(0) scale(1);
+}
+
+a:hover {
+    color: rgb(255, 0, 0);
+    transition: color 0.3s ease;
 }
